hphp/hack/test/typecheck/expression_trees/arithmetic.php.like_types.exp
File "arithmetic.php", line 6, characters 8-8:
Typing error (Typing[4110])
  File "arithmetic.php", line 6, characters 8-8:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "arithmetic.php", line 6, characters 12-12:
Typing error (Typing[4110])
  File "arithmetic.php", line 6, characters 12-12:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "arithmetic.php", line 7, characters 8-8:
Typing error (Typing[4110])
  File "arithmetic.php", line 7, characters 8-8:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "arithmetic.php", line 7, characters 12-12:
Typing error (Typing[4110])
  File "arithmetic.php", line 7, characters 12-12:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "arithmetic.php", line 8, characters 8-8:
Typing error (Typing[4110])
  File "arithmetic.php", line 8, characters 8-8:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "arithmetic.php", line 8, characters 12-12:
Typing error (Typing[4110])
  File "arithmetic.php", line 8, characters 12-12:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "arithmetic.php", line 9, characters 8-8:
Typing error (Typing[4110])
  File "arithmetic.php", line 9, characters 8-8:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "arithmetic.php", line 9, characters 12-12:
Typing error (Typing[4110])
  File "arithmetic.php", line 9, characters 12-12:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
